--- a/examples/a-phone/public/templates/loggedin.html
+++ b/examples/a-phone/public/templates/loggedin.html
@@ -6,6 +6,11 @@
     <label for="Number to Dial">To </label>
     <input type="text" id='number_to_dial' name="number_to_dial" value="1-800-444-4444" class="input-block-level" placeholder="1-800-444-4444" autofocus ng-model="phoneNumber" required/>
 
+    <label class="checkbox">
+      <input ng-model="video" type="checkbox"> Video
+    </label>
+
+
     <button type="submit" class="button large expand radius">Call</button>
 
   </fieldset>
