--- a/examples/a-phone/public/templates/calling.html
+++ b/examples/a-phone/public/templates/calling.html
@@ -1,4 +1,25 @@
 
 <legend> Calling {{phoneNumber}}...</legend>
 
+<div class="row-fluid">
+	<div id="localVideoFrame" ng-show="localVideoActive"> 
+	  <div>
+	    <button ng-click="makeBig('localVideo')">Big</button>
+	    <button ng-click="makeSmall('localVideo')">Small</button>
+	    <button ng-click="makeNormal('localVideo')">Normal</button>
+	    <br> 
+	    <video id="localVideo" width="420"></video>
+	  </div> 
+	</div> 
+	<div id="remoteVideoFrame" ng-show="remoteVideoActive"> 
+	  <div>
+	    <button ng-click="makeBig('remoteVideo')">Big</button>
+	    <button ng-click="makeSmall('remoteVideo')">Small</button>
+	    <button ng-click="makeNormal('remoteVideo')">Normal</button>
+	    <br> 
+	    <video id="remoteVideo" width="420"></video>
+	  </div> 
+	</div> 
+</div> 
+
 <button ng-click="hangup()" class="button large expand radius">Hangup</button>
