--- a/examples/a-phone/public/templates/loggedin.html
+++ b/examples/a-phone/public/templates/loggedin.html
@@ -1,42 +1,31 @@
-<div id="alert_placeholder"></div>
-<form  ng-submit="dial()" class="form-horizontal">
-  <fieldset>
-    <legend>{{ callStatus }}</legend>
-
-    <label for="Number to Dial">To </label>
-    <input type="text" id='number_to_dial' name="number_to_dial" value="1-800-444-4444" class="input-block-level" placeholder="1-800-444-4444" autofocus ng-model="phoneNumber" required/>
-
-    <label class="checkbox">
-      <input ng-model="video" type="checkbox"> Video
-    </label>
-
-
-    <button type="submit" class="button large expand radius">Call</button>
-
-  </fieldset>
-</form>
+<div id="alert_placeholder">
+</div>
 <div class="row-fluid">
-	<div id="localVideoFrame" class="video-container" ng-show="localVideoActive"> 
-	  <div>
-	    <button ng-click="makeSmall('localVideo')">Small</button>
-	    <button ng-click="makeNormal('localVideo')">Normal</button>
-	    <button ng-click="makeBig('localVideo')">Big</button>
-      </div>
-      <div> 
-	    <video id="localVideo" width="420" autoplay></video>
-	  </div> 
-	</div> 
-	<div id="remoteVideoFrame" class="video-container" ng-show="remoteVideoActive"> 
-	  <div>
-	    <button ng-click="makeSmall('remoteVideo')">Small</button>
-	    <button ng-click="makeNormal('remoteVideo')">Normal</button>
-	    <button ng-click="makeBig('remoteVideo')">Big</button>
-      </div>
-      <div> 
-	    <video id="remoteVideo" width="420"></video>
-	  </div> 
-	</div> 
-</div> 
+	<div class="span4 well" ng-repeat="call in calls">
+		<legend>{{ call.slogan }}</legend>
 
-<button ng-click="hangup()" class="button large expand radius">Hangup</button>
+		<div ng-show="call.makeCall">
+			<label for="Number to Dial">To </label>
+			<input type="text" name="number_to_dial" value="1-214-717-8973" class="input-block-level" autofocus ng-model="call.leg" />
+			<label class="checkbox">
+<!-- 				<input ng-click="addVideo({{$index}})" ng-model="video" type="checkbox"> Video
+ -->				<input ng-model="call.video" type="checkbox"> Video
+			</label>
 
+			<button type="button" class="btn" ng-click="dial({{$index}})" ng-show="call.dial">Call</button>
+			<button type="button" class="btn" ng-click="hangup({{$index}})" ng-show="call.hangup">Hangup</button>
+		</div>
+		<div class="row-fluid">
+			<div id="videoFrame-{{$index}}" class="video-container text-center" ng-show="call.videoActive"> 
+				<p>  
+					<button class="btn" ng-click="makeSmall('video-{{$index}}')">Small</button>
+					<button class="btn" ng-click="makeNormal('video-{{$index}}')">Normal</button>
+					<button class="btn" ng-click="makeBig('video-{{$index}}')">Big</button>
+				</p>
+				<div> 
+					<video id="video-{{$index}}" class="videoStream" width="50%" autoplay></video>
+				</div> 
+			</div> 
+		</div> 
+	</div> 
+</div>
