--- a/examples/a-phone/public/templates/login.html
+++ b/examples/a-phone/public/templates/login.html
@@ -1,5 +1,5 @@
 <div class="pagination-centered">
-	<p>Please Login to turn your browser into your AT&T phone</p>
+	<p>Please click 'Start' to turn your browser into your AT&T phone</p>
 	<img src="/img/att-foundry.jpg" alt="AT&amp;T Foundry">
 </div>
 
